# uhttp.server

./: .gitignore  README.md  pyproject.toml  setup.py
uhttp/: __init__.py  server.py
uhttp/templates/: index.html
